feat(auth): add register use (account + profile + verify email)